# DummyDataGenerator-Kimwonseok-19000089

./: .gitignore  CLAUDE.md  CMakeLists.txt  DummyDataGenerator2.sln  README.md
DummyDataGenerator2/: DummyDataGenerator2.vcxproj  generator.cpp  generator.h  json_builder.h  main.cpp  models.h  semiconductor_sample_orders.json
DummyDataGenerator2/output/: dummy_20260508_141222.json  dummy_20260508_141517.json  dummy_20260508_141530.json
data/templates/: production_order_template.json
src/: DummyDataGenerator.cpp  DummyDataGenerator.h  SimpleJsonParser.cpp  SimpleJsonParser.h  main.cpp
